[gd_scene load_steps=12 format=3 uid="uid://bgb3jfjlbgy7b"]

[ext_resource type="PackedScene" uid="uid://c5lj1li5t05xr" path="res://player.tscn" id="1_ah6c2"]
[ext_resource type="Script" path="res://game.gd" id="1_u0dyn"]
[ext_resource type="PackedScene" uid="uid://c1wtp6j0nucyf" path="res://Plataformas/plataforma.tscn" id="2_smf0a"]
[ext_resource type="PackedScene" uid="uid://bip3q30dhebn2" path="res://Plataformas/JakePlataforma.tscn" id="3_w362g"]
[ext_resource type="PackedScene" uid="uid://cqxv0sk7v0x35" path="res://Plataformas/nuvem.tscn" id="4_yaofe"]
[ext_resource type="PackedScene" uid="uid://cxx6y7fdukchm" path="res://Plataformas/enemy.tscn" id="5_7kp3r"]
[ext_resource type="FontFile" uid="uid://br1fqps1ru6cb" path="res://Assets/Fontes/Lemon Fruit.otf" id="6_2dsyi"]
[ext_resource type="Texture2D" uid="uid://cbao87nowr6i0" path="res://Assets/Menu/BotaoEsquerda.png" id="8_yc75m"]
[ext_resource type="Texture2D" uid="uid://6lqjw11xvyt1" path="res://Assets/Menu/BotaoDireita.png" id="9_n3gne"]
[ext_resource type="Texture2D" uid="uid://c3edbfil3chv8" path="res://Assets/Menu/BotaoPulo.png" id="10_ggonk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrynq"]

[node name="doodle_jump" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_u0dyn")
plataform_scene = Array[PackedScene]([ExtResource("2_smf0a"), ExtResource("3_w362g"), ExtResource("4_yaofe"), ExtResource("5_7kp3r")])

[node name="plataform_container" type="Node2D" parent="."]

[node name="Plataforma" parent="plataform_container" instance=ExtResource("2_smf0a")]
position = Vector2(92, 317)
scale = Vector2(2.8, 1)

[node name="Player2" parent="." instance=ExtResource("1_ah6c2")]
visibility_layer = 2
position = Vector2(90, 291)
collision_mask = 6

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(90, 160)

[node name="platform_cleaner" type="Area2D" parent="Camera"]
position = Vector2(1, 198)
scale = Vector2(9.4, 1)
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/platform_cleaner"]
shape = SubResource("RectangleShape2D_jrynq")

[node name="score" type="Label" parent="Camera"]
offset_left = -22.0
offset_top = -146.0
offset_right = 18.0
offset_bottom = -123.0
theme_override_colors/font_color = Color(0.733333, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.599971, 0.731474, 1, 1)
theme_override_fonts/font = ExtResource("6_2dsyi")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="btn_left" type="TouchScreenButton" parent="Buttons"]
position = Vector2(4, 279)
scale = Vector2(0.094, 0.094)
texture_normal = ExtResource("8_yc75m")
action = "ui_left"

[node name="btn_right" type="TouchScreenButton" parent="Buttons"]
position = Vector2(127, 266)
scale = Vector2(0.098, 0.121084)
texture_normal = ExtResource("9_n3gne")
action = "ui_right"

[node name="jump_btn" type="TouchScreenButton" parent="Buttons"]
position = Vector2(5, 229)
scale = Vector2(0.074, 0.074)
texture_normal = ExtResource("10_ggonk")
action = "ui_accept"

[node name="jump_btn2" type="TouchScreenButton" parent="Buttons"]
position = Vector2(139, 229)
scale = Vector2(0.074, 0.074)
texture_normal = ExtResource("10_ggonk")
action = "ui_accept"

[connection signal="body_entered" from="Camera/platform_cleaner" to="." method="_on_platform_cleaner_body_entered"]
